# fishingeffort

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  test.py
fishingeffort/: fishingeffort.py  show.py  utils.py
tests/: AIS_data_test.csv  AIS_data_test.dbf  AIS_data_test.shp  AIS_data_test.shx  AIS_data_test.xls  AIS_data_test.xlsx  AIS_data_test_hauls_identified.csv  test_basic.py  test_fishing_identification.py  test_fishing_speed.py  test_point_to_line.py  test_read_data.py  test_swept_area_ratio.py
tests/AIS_data_test_hauls/: AIS_data_test_hauls.dbf  AIS_data_test_hauls.shp  AIS_data_test_hauls.shx
